--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,9 +2,24 @@
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
-.btn-primary{
-    height: 64px;
+.header{
+    background-color: #fff8f3;
+    background-image: url('../images/header_bg.png'),url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right,left;
+    margin-left: 40px;
 }
+.btn-primary{
+    font-weight: 700;
+    font-size: 20px;
+    height: 64px;
+    border-radius: 5px;
+    background-color: #fd6e0a;
+    color: #ffffff;
+    border: 0;
+    padding: 18px 35px;
+}
+
 span{
     color: darkgoldenrod;
 }
@@ -19,8 +34,33 @@ nav{
 }
 nav ul{
     display: flex;
+    align-items: center;
 }
 nav ul li{
     list-style: none;
     margin-right: 50px;
+}
+/* Banner css */
+.banner{
+    display: flex;
+    margin: 0 200px;
+    align-items: center;
+}
+.banner-subtitle{
+    font-weight: 400;
+    font-size: 45px;
+}
+.banner-title{
+    font-size: 700;
+    font-size: 65px;
+    margin-top: 5px ;
+    margin-bottom: 20px;
+}
+.banner-description{
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+.btn-secondary{
+
 }
