--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -69,7 +69,7 @@ nav ul li{
 .main{
 max-width: 1140px;
 margin: 0 auto;
-background: #fff8f3;
+
 }
 /* About Section Start */
 .about{
@@ -77,10 +77,13 @@ background: #fff8f3;
     padding: 130px 150px;
     text-align: center;
     margin-top: 150px;
+    background: #fff8f3;
 }
 .section-title{
     font-weight: 700   ;
     font-size: 35px;
+    text-align: center;
+    margin: 40px 0;
    
     margin-bottom: 30px;
 }
@@ -105,3 +108,69 @@ background: #fff8f3;
     color: #474747;
 }
 /* About section end */
+/* What i do section */
+.What-i-do{
+    text-align: center;
+    
+    margin-top: 130px;
+}
+.section-description{
+    margin-bottom: 40px;
+}
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill-title{
+    font-weight: 700; 
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+
+}
+.skill{
+   background: #ffffff;
+   box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.6);
+   border-radius: 5px;
+   padding: 30px;
+}
+.skill-description{
+    color: #757575;
+}
+/* Experience and Knowlwdge Start */
+.knowledge{
+    display: flex;
+    gap: 40px;
+    
+}
+.education{
+    margin-top: 50px;
+}
+
+.education-title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 20px; 
+}
+.education-subTitle{
+    font-size: 20px;
+    font-weight: 600;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.education-description{
+    font-size: 16px;
+    color: #757575;
+    margin-bottom: 20px;
+}
+.education-side{
+    font-size: 30px;
+    margin-bottom: 30px;
+    font-weight: 700;
+    color: #474747;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align:center;
+}
